--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="styleOlli.css">
     <title>wochenaufgabe1</title>
   </head>
-  <body></body>
+  <body>
+    
+  </body>
 </html>
