--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <title>wochenaufgabe1</title>
   </head>
   <body>
-    
+    <section class="hero-section brd">
+      <figure class="tajam brd">
+        <img src="tajam" alt="tajam">
+        <figurcaption class="brd">tajam</figurcaption>
+      </figure>
+      <nav class="brd">
+        <ul class="brd">
+          <li class="brd"><a href="#">HOME</a></li>
+          <li class="brd"><a href="#">ABOUT</a></li>
+          <li class="brd"><a href="#">EXPERTISE</a></li>
+          <li class="brd"><a href="#">TEAMS</a></li>
+          <li class="brd"><a href="#">WORKS</a></li>
+          <li class="brd"><a href="#">PEOPLE SAY</a></li>
+          <li class="brd"><a href="#">CONTACT</a></li>
+        </ul>
+      </nav>
+      <article>
+        <h1>We Are Awesome Creative Agency</h1>
+        <em class="line"></em>
+        <p>
+          This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. aenean sollicitudin, lorem quis bibendum auctor, nisi ellit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+        </p>
+        <button class="btn-learnMore">LEARN MORE</button>
+      </article>
+    </section>  
   </body>
 </html>
