--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
       <article>
         <h1>We Are Awesome Creative Agency</h1>
-        <em class="line">_____</em>
+        <div class="line">_____</div>
         <p>
           This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. aenean sollicitudin, lorem quis bibendum auctor, nisi ellit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
         </p>
