wird direkt gelöscht

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>wochenaufgabe1</title>
   </head>
   <body>
-
     <section class="hero-section">
       <nav class="hero-section-nav">
         <figure class="tajam">
@@ -205,7 +204,7 @@
           <h3>STAY IN TOUCH</h3>
           <form action="#">
             <input type="mail" placeholder="Email" />
-            <input type="submit" value="" />
+            <input id="input-paper" type="image" src="/img/paper122.svg" />
           </form>
           <img src="/img/facebook.svg" alt="" />
           <img src="/img/twitter.svg" alt="" />
