fixed some breakepoints

--- a/index.html
+++ b/index.html
@@ -4,256 +4,264 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleNiklas.css" />
     <link rel="stylesheet" href="styleOlli.css" />
     <title>wochenaufgabe1</title>
   </head>
   <body>
-
-
     <main class="app">
-
-    <section class="hero-section">
-      <nav class="hero-section-nav">
+      <section class="hero-section">
+        <nav class="hero-section-nav">
+          <figure class="tajam">
+            <img src="./img/logo.svg" alt="tajam" />
+            <figurcaption class="tajam-caption">tajam</figurcaption>
+          </figure>
+          <ul class="hero-section-nav-li">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">EXPERTISE</a></li>
+            <li><a href="#">TEAMS</a></li>
+            <li><a href="#">WORKS</a></li>
+            <li><a href="#">PEOPLE SAY</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </nav>
+        <article>
+          <h1>We Are Awesome Creative Agency</h1>
+          <div class="line">_____</div>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+            auctor, nisi ellit consequat ipsum, nec sagittis sem nibh id elit.
+            Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+            Morbi accumsan ipsum velit.
+          </p>
+          <div class="btn-learnMore">LEARN MORE</div>
+        </article>
+      </section>
+      <section class="ourstory-section">
         <figure class="tajam">
-          <img src="./img/logo.svg" alt="tajam" />
-          <figurcaption class="tajam-caption">tajam</figurcaption>
+          <img src="./img/logo-big.svg" width="120" alt="tajam" />
         </figure>
-        <ul class="hero-section-nav-li">
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">EXPERTISE</a></li>
-          <li><a href="#">TEAMS</a></li>
-          <li><a href="#">WORKS</a></li>
-          <li><a href="#">PEOPLE SAY</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </nav>
-      <article>
-        <h1>We Are Awesome Creative Agency</h1>
-        <div class="line">_____</div>
-        <p>
-          This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
-          velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-          nisi ellit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-          odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-          ipsum velit.
-        </p>
-        <div class="btn-learnMore">LEARN MORE</div>
-      </article> 
-    </section>
-    <section class="ourstory-section">
-      <figure class="tajam">
-        <img src="./img/logo-big.svg" width="120" alt="tajam" />
-      </figure>
-      <article>
-        <h2>OUR STORY</h2>
-        <p>
-          This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
-          velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-          nisi ellit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-          odio sit amet nibh vulputate cursus. 
-        </p>
-        <p>
-          Morbi accumsan ipsum velit. Nam nec tellus a odiotincidunt auctor a ornare odio.
-          Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad 
-          litora torquent per conubia nostra, per inceptos himenaeos.
-        </p>
-        <div class="btn-learnMore">LEARN MORE</div>
-      </article>       
-    </section>
-    <section class="watchstory-section">
-      <figure class="play">
-        <img src="./img/play.png" alt="play" />
-        <figurcaption class="play-caption"><h3>WATCH OUR STORY</h3></figurcaption>
-      </figure>      
-    </section> 
-    <section class="expertise">
-      <div class="card-header">
-        <h2>EXPERTISE</h2>
-        <p>
-          Lorem ipsum dolor sit a<span id="underline">met pro</span>in gravida
-          nibh vel velit
-        </p>
-      </div>
-      <div class="card-wrapper">
-        <div class="card-section-top">
-          <div class="card">
-            <img src="/img/screen.svg" alt="Picture of a Screen" />
-            <h3>WEB DESIGN & DEVELOPMENT</h3>
-            <p>
-              This is Photoshop's version of Lorem<br />
-              Ipsum. Proin gravida nibh vel velit<br />
-              auctor aliquet Aenean.
-            </p>
+        <article>
+          <h2>OUR STORY</h2>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+            auctor, nisi ellit consequat ipsum, nec sagittis sem nibh id elit.
+            Duis sed odio sit amet nibh vulputate cursus.
+          </p>
+          <p>
+            Morbi accumsan ipsum velit. Nam nec tellus a odiotincidunt auctor a
+            ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
+            Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+            per inceptos himenaeos.
+          </p>
+          <div class="btn-learnMore">LEARN MORE</div>
+        </article>
+      </section>
+      <section class="watchstory-section">
+        <figure class="play">
+          <img src="./img/play.png" alt="play" />
+          <figurcaption class="play-caption"
+            ><h3>WATCH OUR STORY</h3></figurcaption
+          >
+        </figure>
+      </section>
+      <section class="expertise">
+        <div class="card-header">
+          <h2>EXPERTISE</h2>
+          <p>
+            Lorem ipsum dolor sit a<span id="underline">met pro</span>in gravida
+            nibh vel velit
+          </p>
+        </div>
+        <div class="card-wrapper">
+          <div class="card-section-top">
+            <div class="card">
+              <img src="/img/screen.svg" alt="Picture of a Screen" />
+              <h3>WEB DESIGN & DEVELOPMENT</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
+            <div class="card">
+              <img src="/img/pen.svg" alt="Picture of a Pen" />
+              <h3>BRENDING IDENTITY</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
+            <div class="card">
+              <img src="/img/mobile.svg" alt="Picture of a Phone" />
+              <h3>MOBILE APP</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
           </div>
-          <div class="card">
-            <img src="/img/pen.svg" alt="Picture of a Pen" />
-            <h3>BRENDING IDENTITY</h3>
-            <p>
-              This is Photoshop's version of Lorem<br />
-              Ipsum. Proin gravida nibh vel velit<br />
-              auctor aliquet Aenean.
-            </p>
-          </div>
-          <div class="card">
-            <img src="/img/mobile.svg" alt="Picture of a Phone" />
-            <h3>MOBILE APP</h3>
-            <p>
-              This is Photoshop's version of Lorem<br />
-              Ipsum. Proin gravida nibh vel velit<br />
-              auctor aliquet Aenean.
-            </p>
+          <div class="card-section-bottom">
+            <div class="card">
+              <img src="/img/graph.svg" alt="Picture of a Graph" />
+              <h3>SEARCH ENGINE OPTIMIZATION</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
+            <div class="card">
+              <img src="/img/gameboy.svg" alt="Picture of a Gameboy" />
+              <h3>GAME DEVELOPMENT</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
+            <div class="card">
+              <img src="/img/heart.svg" alt="Picture of a Heart" />
+              <h3>MADE WITH LOVE</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="card-section-bottom">
-          <div class="card">
-            <img src="/img/graph.svg" alt="Picture of a Graph" />
-            <h3>SEARCH ENGINE OPTIMIZATION</h3>
-            <p>
-              This is Photoshop's version of Lorem<br />
-              Ipsum. Proin gravida nibh vel velit<br />
-              auctor aliquet Aenean.
-            </p>
-          </div>
-          <div class="card">
-            <img src="/img/gameboy.svg" alt="Picture of a Gameboy" />
-            <h3>GAME DEVELOPMENT</h3>
-            <p>
-              This is Photoshop's version of Lorem<br />
-              Ipsum. Proin gravida nibh vel velit<br />
-              auctor aliquet Aenean.
-            </p>
-          </div>
-          <div class="card">
-            <img src="/img/heart.svg" alt="Picture of a Heart" />
-            <h3>MADE WITH LOVE</h3>
-            <p>
-              This is Photoshop's version of Lorem<br />
-              Ipsum. Proin gravida nibh vel velit<br />
-              auctor aliquet Aenean.
-            </p>
-          </div>
+      </section>
+      <section class="meet-our-amazin-team">
+        <div class="team-section-header">
+          <h3>MEET OUR AMAZING TEAM</h3>
+          <p>
+            Lorem ipsum dolor sit a<span id="underline">met pro</span>in gravida
+            nibh vel velit
+          </p>
         </div>
-      </div>
-    </section>
-    <section class="meet-our-amazin-team">
-      <div class="team-section-header">
-        <h3>MEET OUR AMAZING TEAM</h3>
-        <p>
-          Lorem ipsum dolor sit a<span id="underline">met pro</span>in gravida
-          nibh vel velit
-        </p>
-      </div>
-      <div class="team-card-wrapper">
-        <div class="team-card">
-          <div class="picture"></div>
-          <h4>SEMF UCUK</h4>
-          <p>CEO & FOUNDER</p>
-        </div>
-        <div class="team-card">
-          <div class="picture"></div>
-          <h4>DIK ALADIN</h4>
-          <p>ENGINERRING</p>
-        </div>
+        <div class="team-card-wrapper">
+          <div class="team-card">
+            <div class="picture"></div>
+            <h4>SEMF UCUK</h4>
+            <p>CEO & FOUNDER</p>
+          </div>
+          <div class="team-card">
+            <div class="picture"></div>
+            <h4>DIK ALADIN</h4>
+            <p>ENGINERRING</p>
+          </div>
 
-        <div class="team-card">
-          <div class="picture"></div>
-          <h4>JENG KOL</h4>
-          <p>DESIGNER</p>
-        </div>
-        <div class="team-card">
-          <div class="picture"></div>
-          <h4>PET ROMAK</h4>
-          <p>MARKETING</p>
-        </div>
-      </div>
-      <div class="hiring-wrapper">
-        <p>Become part of our dream team, let's join us!</p>
-        <p id="hiring-button">WE ARE HIRING</p>
-      </div>
-    </section>
-    <section class="contact-section">
-      <div class="contact-field">
-        <h2>GIVE US A GOOD NEWS</h2>
-        <form action="#">
-          <input type="text" placeholder="Name" /><br />
-          <input type="mail" placeholder="Email" /><br />
-          <input type="text" placeholder="Subject" /><br />
-          <input
-            id="big-inputbox"
-            type="text"
-            placeholder="Your Message"
-          /><br />
-          <input id="button" type="submit" value="SUBMIT" />
-        </form>
-      </div>
-      <div class="partner-wrapper">
-        <h2>OUR HAPPY CLIENT</h2>
-        <div class="partner-logo-wrapper">
-          <div class="first-five-logos">
-            <img src="/img/Zara_Logo.svg" alt="" />
-            <img src="/img/1280px-Barneys_New_York_Logo.svg" alt="" />
-            <img src="/img/Calvin_klein_logo.svg" alt="" />
-            <img src="/img/Converse_logo.svg" alt="" />
-            <img src="/img/1280px-Levi's_logo.svg" alt="" />
+          <div class="team-card">
+            <div class="picture"></div>
+            <h4>JENG KOL</h4>
+            <p>DESIGNER</p>
           </div>
-          <div class="last-five-logos">
-            <img src="/img/Logo_of_Mango_(new).svg" alt="" />
-            <img src="/img/1280px-Gucci_Logo.svg" alt="" />
-            <img src="/img/1280px-Logo_NIKE.svg" alt="" />
-            <img src="/img/Puma_Logo.svg" alt="" />
-            <img src="/img/Billabong.svg" alt="" />
+          <div class="team-card">
+            <div class="picture"></div>
+            <h4>PET ROMAK</h4>
+            <p>MARKETING</p>
           </div>
         </div>
-      </div>
-    </section>
-    <footer>
-      <div class="footer-wrapper-main">
-        <div class="footer-wrapper-main-left">
-          <img src="/img/logo.svg" alt="" />
-          <h3>tajam</h3>
-          <p>
-            lorem quis bibendum auctor, nisi elit <br />
-            consequat ipsum, nec sagittis sem nibh elit. <br />
-            Duis sed odio sit amet auctror a ornare odio <br />
-            non mauris vitae erat in elit
-          </p>
+        <div class="hiring-wrapper">
+          <p>Become part of our dream team, let's join us!</p>
+          <p id="hiring-button">WE ARE HIRING</p>
         </div>
-        <div class="footer-wrapper-main-middle">
-          <img src="/img/big104.svg" alt="" />
-          <p>
-            Ruko cucruk, JI. Radio luar dalem jos <br />
-            No.12-13, Kalideres - Jakarta Barat <br />
-            11480 - Indonesia
-          </p>
-          <img src="/img/phone351.svg" alt="" />
-          <p>(+62) 21-2224 3333</p>
-        </div>
-        <div class="footer-wrapper-main-right">
-          <h3>STAY IN TOUCH</h3>
+      </section>
+      <section class="contact-section">
+        <div class="contact-field">
+          <h2>GIVE US A GOOD NEWS</h2>
           <form action="#">
-            <input type="mail" placeholder="Email" />
-            <input id="input-paper" type="image" src="/img/paper122.svg" />
+            <input id="textfield-margin" type="text" placeholder="Name" /><br />
+            <input
+              id="textfield-margin"
+              type="mail"
+              placeholder="Email"
+            /><br />
+            <input
+              id="textfield-margin"
+              type="text"
+              placeholder="Subject"
+            /><br />
+            <input
+              id="big-inputbox textfield-margin"
+              type="text"
+              placeholder="Your Message"
+            /><br />
+            <input id="button" type="submit" value="SUBMIT" />
           </form>
-          <img src="/img/facebook.svg" alt="" />
-          <img src="/img/twitter.svg" alt="" />
-          <img src="/img/dribbble.svg" alt="" />
-          <img src="/img/instagram.svg" alt="" />
-          <img src="/img/gplus.svg" alt="" />
-          <img src="/img/youtube.svg" alt="" />
         </div>
-      </div>
-      <div class="footer-wrapper-buttom">
-        <ul>
-          <li>HELP</li>
-          <li>TERMS & CONDITION</li>
-          <li>PRIVACY</li>
-          <li>Copyright &#169; 2015 - Tajem Creative</li>
-        </ul>
-      </div>
-    </footer>
-  </main>
+        <div class="partner-wrapper">
+          <h2>OUR HAPPY CLIENT</h2>
+          <div class="partner-logo-wrapper">
+            <div class="first-five-logos">
+              <img src="/img/Zara_Logo.svg" alt="" />
+              <img src="/img/1280px-Barneys_New_York_Logo.svg" alt="" />
+              <img src="/img/Calvin_klein_logo.svg" alt="" />
+              <img src="/img/Converse_logo.svg" alt="" />
+              <img src="/img/1280px-Levi's_logo.svg" alt="" />
+            </div>
+            <div class="last-five-logos">
+              <img src="/img/Logo_of_Mango_(new).svg" alt="" />
+              <img src="/img/1280px-Gucci_Logo.svg" alt="" />
+              <img src="/img/1280px-Logo_NIKE.svg" alt="" />
+              <img src="/img/Puma_Logo.svg" alt="" />
+              <img src="/img/Billabong.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="footer-wrapper-main">
+          <div class="footer-wrapper-main-left">
+            <img src="/img/logo.svg" alt="" />
+            <h3>tajam</h3>
+            <p>
+              lorem quis bibendum auctor, nisi elit <br />
+              consequat ipsum, nec sagittis sem nibh elit. <br />
+              Duis sed odio sit amet auctror a ornare odio <br />
+              non mauris vitae erat in elit
+            </p>
+          </div>
+          <div class="footer-wrapper-main-middle">
+            <img src="/img/big104.svg" alt="" />
+            <p>
+              Ruko cucruk, JI. Radio luar dalem jos <br />
+              No.12-13, Kalideres - Jakarta Barat <br />
+              11480 - Indonesia
+            </p>
+            <img src="/img/phone351.svg" alt="" />
+            <p>(+62) 21-2224 3333</p>
+          </div>
+          <div class="footer-wrapper-main-right">
+            <h3>STAY IN TOUCH</h3>
+            <form action="#">
+              <input type="mail" placeholder="Email" />
+              <input id="input-paper" type="image" src="/img/paper122.svg" />
+            </form>
+            <img src="/img/facebook.svg" alt="" />
+            <img src="/img/twitter.svg" alt="" />
+            <img src="/img/dribbble.svg" alt="" />
+            <img src="/img/instagram.svg" alt="" />
+            <img src="/img/gplus.svg" alt="" />
+            <img src="/img/youtube.svg" alt="" />
+          </div>
+        </div>
+        <div class="footer-wrapper-buttom">
+          <ul>
+            <li>HELP</li>
+            <li>TERMS & CONDITION</li>
+            <li>PRIVACY</li>
+            <li>Copyright &#169; 2015 - Tajem Creative</li>
+          </ul>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
