--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleNiklas.css" />
     <link rel="stylesheet" href="styleOlli.css" />
-    <title>wochenaufgabe1</title>
+    <title>Wochenaufgabe1</title>
   </head>
   <body>
     <main class="app">
