hoffentlich jetzt alles ok

--- a/index.html
+++ b/index.html
@@ -44,84 +44,68 @@
         <figure class="tajam">
           <img src="./img/logo-big.svg" width="120" alt="tajam" />
         </figure>
-
-        <ul class="hero-section-nav-li">
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">EXPERTISE</a></li>
-          <li><a href="#">TEAMS</a></li>
-          <li><a href="#">WORKS</a></li>
-          <li><a href="#">PEOPLE SAY</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </nav>
-      <article>
-        <h1 class="c-wh">We Are Awesome Creative Agency</h1>
-        <div class="line">_____</div>
-        <p>
-          This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
-          velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-          nisi ellit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-          odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-          ipsum velit.
-        </p>
-        <div class="btn-learnMore">LEARN MORE</div>
-      </article> 
-    </section>
-    <section class="ourstory-section">
-      <figure>
-        <img src="./img/logo-big.svg" width="160" alt="tajam" />
-      </figure>
-      <article>
-        <h2>OUR STORY</h2>
-        <p>
-          This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
-          velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-          nisi ellit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-          odio sit amet nibh vulputate cursus. 
-        </p>
-        <p>
-          Morbi accumsan ipsum velit. Nam nec tellus a odiotincidunt auctor a ornare odio.
-          Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad 
-          litora torquent per conubia nostra, per inceptos himenaeos.
-        </p>
-        <div class="btn-learnMore">LEARN MORE</div>
-      </article>       
-    </section>
-    <section class="watchstory-section">
-      <figure class="play">
-        <img src="./img/play.png" alt="play" />
-        <figurcaption class="play-caption"><p>WATCH OUR STORY</p></figurcaption>
-      </figure>      
-    </section> 
-    <section class="expertise">
-      <div class="card-header">
-        <h2>EXPERTISE</h2>
-        <p>
-          Lorem ipsum dolor sit a<span id="underline">met pro</span>in gravida
-          nibh vel velit
-        </p>
-      </div>
-      <div class="card-wrapper">
-        <div class="card-section-top">
-          <div class="card">
-            <img src="/img/screen.svg" alt="Picture of a Screen" />
-            <h3>WEB DESIGN & DEVELOPMENT</h3>
-            <p>
-              This is Photoshop's version of Lorem<br />
-              Ipsum. Proin gravida nibh vel velit<br />
-              auctor aliquet Aenean.
-            </p>
-          </div>
-          <div class="card">
-            <img src="/img/pen.svg" alt="Picture of a Pen" />
-            <h3>BRENDING IDENTITY</h3>
-            <p>
-              This is Photoshop's version of Lorem<br />
-              Ipsum. Proin gravida nibh vel velit<br />
-              auctor aliquet Aenean.
-            </p>
-
+        <article>
+          <h2>OUR STORY</h2>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+            auctor, nisi ellit consequat ipsum, nec sagittis sem nibh id elit.
+            Duis sed odio sit amet nibh vulputate cursus.
+          </p>
+          <p>
+            Morbi accumsan ipsum velit. Nam nec tellus a odiotincidunt auctor a
+            ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
+            Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+            per inceptos himenaeos.
+          </p>
+          <div class="btn-learnMore">LEARN MORE</div>
+        </article>
+      </section>
+      <section class="watchstory-section">
+        <figure class="play">
+          <img src="./img/play.png" alt="play" />
+          <figurcaption class="play-caption"
+            ><h3>WATCH OUR STORY</h3></figurcaption
+          >
+        </figure>
+      </section>
+      <section class="expertise">
+        <div class="card-header">
+          <h2>EXPERTISE</h2>
+          <p>
+            Lorem ipsum dolor sit a<span id="underline">met pro</span>in gravida
+            nibh vel velit
+          </p>
+        </div>
+        <div class="card-wrapper">
+          <div class="card-section-top">
+            <div class="card">
+              <img src="/img/screen.svg" alt="Picture of a Screen" />
+              <h3>WEB DESIGN & DEVELOPMENT</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
+            <div class="card">
+              <img src="/img/pen.svg" alt="Picture of a Pen" />
+              <h3>BRENDING IDENTITY</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
+            <div class="card">
+              <img src="/img/mobile.svg" alt="Picture of a Phone" />
+              <h3>MOBILE APP</h3>
+              <p>
+                This is Photoshop's version of Lorem<br />
+                Ipsum. Proin gravida nibh vel velit<br />
+                auctor aliquet Aenean.
+              </p>
+            </div>
           </div>
           <div class="card-section-bottom">
             <div class="card">
@@ -284,21 +268,17 @@
             </div>
           </div>
         </div>
-
         <nav class="footer-wrapper-bottom">
           <ul class="footer-bottom-left">
-
             <li>HELP</li>
             <li>TERMS & CONDITION</li>
             <li>PRIVACY</li>
           </ul>
-
           <div class="footer-bottom-right">
             <p>Copyright &#169; 2015 - Tajem Creative</p>
           </div>
         </nav>
       </footer>
-
     </main>
   </body>
 </html>
