--- a/index.html
+++ b/index.html
@@ -201,18 +201,21 @@
           <h2>OUR HAPPY CLIENT</h2>
           <div class="partner-logo-wrapper">
             <div class="first-five-logos">
-              <img src="/img/Zara_Logo.svg" alt="" />
-              <img src="/img/1280px-Barneys_New_York_Logo.svg" alt="" />
-              <img src="/img/Calvin_klein_logo.svg" alt="" />
-              <img src="/img/Converse_logo.svg" alt="" />
-              <img src="/img/1280px-Levi's_logo.svg" alt="" />
+              <img src="/img/Zara_Logo.svg" alt="Zara-Logo" />
+              <img
+                src="/img/1280px-Barneys_New_York_Logo.svg"
+                alt="Barneys New York Logo"
+              />
+              <img src="/img/Calvin_klein_logo.svg" alt="Calvin Klein Logo" />
+              <img src="/img/Converse_logo.svg" alt="Converse Logo" />
+              <img src="/img/1280px-Levi's_logo.svg" alt="Levis Logo" />
             </div>
             <div class="last-five-logos">
-              <img src="/img/Logo_of_Mango_(new).svg" alt="" />
-              <img src="/img/1280px-Gucci_Logo.svg" alt="" />
-              <img src="/img/1280px-Logo_NIKE.svg" alt="" />
-              <img src="/img/Puma_Logo.svg" alt="" />
-              <img src="/img/Billabong.svg" alt="" />
+              <img src="/img/Logo_of_Mango_(new).svg" alt="Mango Logo" />
+              <img src="/img/1280px-Gucci_Logo.svg" alt=" Gucci Logo" />
+              <img src="/img/1280px-Logo_NIKE.svg" alt="Nike Logo" />
+              <img src="/img/Puma_Logo.svg" alt="Puma Logo" />
+              <img src="/img/Billabong.svg" alt="Billabong Logo" />
             </div>
           </div>
         </div>
@@ -234,7 +237,12 @@
           <div class="footer-wrapper-main-middle">
             <h4>OUR STUDIO</h4>
             <div class="location">
-              <img src="/img/big104.svg" alt="" width="20" height="20" />
+              <img
+                src="/img/big104.svg"
+                alt="adress symbol"
+                width="20"
+                height="20"
+              />
               <p>
                 Ruko cucruk, JI. Radio luar dalem jos <br />
                 No.12-13, Kalideres - Jakarta Barat <br />
@@ -242,7 +250,12 @@
               </p>
             </div>
             <div class="phone">
-              <img src="/img/phone351.png" width="20" height="20" alt="" />
+              <img
+                src="/img/phone351.png"
+                width="20"
+                height="20"
+                alt="phone symbol"
+              />
               <p>(+62) 21-2224 3333</p>
             </div>
           </div>
@@ -255,16 +268,21 @@
                 placeholder="Subcribe our newsletter"
               />
               <div class="email-senden">
-                <input id="input-paper" type="image" src="/img/paper122.png" />
+                <input
+                  id="input-paper"
+                  type="image"
+                  src="/img/paper122.png"
+                  alt="paperplane symbol"
+                />
               </div>
             </form>
             <div class="social-media">
-              <img src="/img/facebook.svg" alt="" />
-              <img src="/img/twitter.svg" alt="" />
-              <img src="/img/dribbble.svg" alt="" />
-              <img src="/img/instagram.svg" alt="" />
-              <img src="/img/gplus.svg" alt="" />
-              <img src="/img/youtube.svg" alt="" />
+              <img src="/img/facebook.svg" alt="facebook Logo" />
+              <img src="/img/twitter.svg" alt="twitter Logo" />
+              <img src="/img/dribbble.svg" alt="dribble Logo" />
+              <img src="/img/instagram.svg" alt="instagram Logo" />
+              <img src="/img/gplus.svg" alt="googleplus Logo" />
+              <img src="/img/youtube.svg" alt="youtube Logo" />
             </div>
           </div>
         </div>
