--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Niklas & Olli" />
+    <meta name="copyright" content="Niklas & Olli" />
+    <meta
+      name="description"
+      content="We are an awsome creative Agency for Web-Development & Game-Development based in Hamburg"
+    />
+    <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleNiklas.css" />
     <link rel="stylesheet" href="styleOlli.css" />
