--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleNiklas.css" />
     <link rel="stylesheet" href="styleOlli.css" />
+    <link rel="icon" href="img/logo.svg" />
     <title>Wochenaufgabe1</title>
   </head>
   <body>
